<resources>
    <string name="app_name">Hugme</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">A place where your mental health is a top priority</string>
    <string name="title_welcome_page">Welcome to HugMe!</string>
    <string name="title_signup_page">Please enter your data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data.</string>
    <string name="title_login_page">We Care Your Mental Health</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email_error">Masukkan alamat email yang valid (contoh: example@gmail.com)</string>
    <string name="check_mental_health">Check Mental Health</string>
    <string name="chat_forum">Forum Chat</string>
    <string name="features">features</string>
    <string name="greeting_main_profilebar">Hai, User bagaimana perasaanmu hari ini?</string>
    <string name="hugme_topbar">HugMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextView_profile_topbar">Profile</string>
    <string name="mode_dark_amp_light"><![CDATA[Mode | Dark & Light]]></string>
    <string name="general_settings">General Settings</string>
    <string name="change_password">Change Password</string>
    <string name="username_profile">Username</string>
    <string name="language">Language</string>
    <string name="information">Information</string>
    <string name="about_the_app">About the app</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="belum_punya_akun">Don`t have an account yet?</string>
    <string name="TvLogin">Login</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="loginimage">LoginImage</string>
    <string name="signupimage">SignupImage</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>