<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout_Profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E7F4FD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_profile_topbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/TextView_profile_topbar"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/backButton_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#E7F4FD"
                android:src="@drawable/baseline_back_24"
                android:contentDescription="Backbutton" />


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ImageView_home_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_topbar" />

        <TextView
            android:id="@+id/username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/username_profile"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageView_home_profile" />


        <androidx.cardview.widget.CardView
            android:id="@+id/CardView_Mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ECECEC"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView_GeneralSettings">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <TextView
                android:id="@+id/TextView_Mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/mode_dark_amp_light" />

            <Switch
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_GeneralSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D9D9D9"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/username_profile">

            <TextView
                android:id="@+id/TextView_GeneralSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/general_settings" />

        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/MaterialButton_ChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            app:cornerRadius="0dp"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:backgroundTint="#ECECEC"
            android:textColor="@color/black"
            android:gravity="start"
            android:text="@string/change_password"
            app:layout_constraintTop_toBottomOf="@+id/CardView_Mode" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/TextView_Language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                app:cornerRadius="0dp"
                android:backgroundTint="#ECECEC"
                android:textColor="@color/black"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@+id/MaterialButton_ChangePassword"
                android:text="@string/language"/>



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_Information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D9D9D9"
            app:layout_constraintTop_toBottomOf="@+id/TextView_Language"
            android:paddingTop="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/TextView_Information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/information"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/MaterialButton_About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ECECEC"
            app:cornerRadius="0dp"
            android:paddingTop="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/cardView_Information"
            android:text="@string/about_the_app"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/MaterialButton_TermsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ECECEC"
            app:cornerRadius="0dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/MaterialButton_About"
            android:text="@string/terms_and_conditions"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/MaterialButton_PrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ECECEC"
            app:cornerRadius="0dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/MaterialButton_TermsAndConditions"
            android:text="@string/privacy_policy"/>



    </androidx.constraintlayout.widget.ConstraintLayout>





</FrameLayout>